# concurrent-programming

./: README.md
assignment-1/: README.md  [es]README.md
assignment-1/solution/: .env  Cargo.toml  README.md  orders.txt
assignment-1/solution/src/: cafeteria.rs  conteiners.rs  conteiners_states.rs  dispenser.rs  enums.rs  error_dispenser.rs  file_orders.rs  lib.rs  main.rs  order.rs  periodic_alert.rs  traits.rs  utils.rs
assignment-1/solution/src/set_conteiners/: infinity_conteiner.rs  mod.rs  no_rechargable_conteiner.rs  rechargable_conteiner.rs
assignment-2/: README.md  [es]README.md
assignment-2/solution/: .gitignore  README.md
assignment-2/solution/compartido/: Cargo.toml
assignment-2/solution/compartido/src/: lib.rs  mensajes_cafetera.rs
assignment-2/solution/desconexion/: Cargo.toml
assignment-2/solution/desconexion/src/: main.rs
assignment-2/solution/server/: Cargo.toml
assignment-2/solution/server/src/: bully_listener.rs  bully_messages.rs  cafetera_listener.rs  coordinador.rs  error_server.rs  lib.rs  main.rs  mensaje.rs  nodo.rs  nodo_handler.rs  utils.rs
assignment-2/solution/sucursal/: Cargo.toml
assignment-2/solution/sucursal/Pedidos/: pedidos_sucursal1.txt  pedidos_sucursal2.txt  pedidos_sucursal3.txt  prueba1.txt  prueba2.txt  prueba3.txt  prueba4.txt  prueba5.txt  prueba6.txt  prueba7.txt  prueba8.txt  prueba9.txt
assignment-2/solution/sucursal/src/: error_sucursal.rs  lib.rs  main.rs  utils.rs
